--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.3.11) bionic; urgency=medium
+
+  * Initial release for bionic
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 24 Oct 2018 11:46:14 +0200
+
 n4d-shutdowner-server (0.3.1) xenial; urgency=high
 
   * lliurex-shutdowner-thinclients cron file should only exist if automatic shutdown is enabled
