Updated changelog. Adding sudo group

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.3.12) bionic; urgency=medium
+
+  * Adding sudo group
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 14 Feb 2019 13:32:53 +0100
+
 n4d-shutdowner-server (0.3.11) bionic; urgency=medium
 
   * Initial release for bionic
