--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.4.12) focal; urgency=medium
+
+  * Initial release for focal
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 16 Feb 2021 17:35:03 +0100
+
 n4d-shutdowner-server (0.3.12) bionic; urgency=medium
 
   * Adding sudo group
