--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.4.13) focal; urgency=medium
+
+  * Added support to configure a custom server shutdown
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 01 Mar 2021 12:07:02 +0100
+
 n4d-shutdowner-server (0.4.12) focal; urgency=medium
 
   * Initial release for focal
