--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.3.14) bionic-updates; urgency=medium
+
+  * Fixed performance in desktops with meta client
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 14 Feb 2022 08:42:59 +0100
+
 n4d-shutdowner-server (0.3.13) bionic-updates; urgency=medium
 
   * Added support to custom server shutdown
