--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.14) jammy; urgency=medium
+
+  * Initial release for Jammy
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 31 Aug 2023 12:55:34 +0200
+
 n4d-shutdowner-server (0.4.14) focal-updates; urgency=medium
 
   * Fixed performance when in desktop with meta client
