Updated changelog. Fixed performance in clientized desktops

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.4.15) focal; urgency=medium
+
+  * Fixed performance in clientized desktops
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 22 Nov 2023 15:27:49 +0100
+
 n4d-shutdowner-server (0.4.14) focal-updates; urgency=medium
 
   * Fixed performance when in desktop with meta client
