--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.15) jammy; urgency=medium
+
+  * Fixed performance in clientized desktop
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 05 Dec 2023 15:45:41 +0100
+
 n4d-shutdowner-server (0.14.14) jammy; urgency=medium
 
   * Initial release for Jammy
