--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.24.15) noble; urgency=medium
+
+  * Initial release for Noble
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 14 Oct 2024 14:46:58 +0200
+
 n4d-shutdowner-server (0.14.15) jammy; urgency=medium
 
   * Fixed performance in clientized desktop
