--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.17) jammy-testing; urgency=medium
+
+  * Fixed plugin
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 12 Mar 2025 13:57:06 +0100
+
 n4d-shutdowner-server (0.14.16) jammy-testing; urgency=medium
 
   * Supported new classroom model
