--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.24.16) noble; urgency=medium
+
+  * Changed to support new classroom model
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 13 Mar 2025 13:46:20 +0100
+
 n4d-shutdowner-server (0.24.15) noble; urgency=medium
 
   * Initial release for Noble
