--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.18.1) jammy-testing; urgency=medium
+
+  * Clean code
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 14 Mar 2025 09:13:13 +0100
+
 n4d-shutdowner-server (0.14.18) jammy-testing; urgency=medium
 
   * Fixed plugin
