Updated changelog. Fixed plugin

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.24.18) noble; urgency=medium
+
+  * Fixed plugin
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 24 Apr 2025 08:51:53 +0200
+
 n4d-shutdowner-server (0.24.17) noble; urgency=medium
 
   * Clean code
