--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.18.4) jammy-testing; urgency=medium
+
+  * Wait until the session starts
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 14 May 2025 16:33:39 +0200
+
 n4d-shutdowner-server (0.14.18.3) jammy-testing; urgency=medium
 
   * Fixed performance in new model
