Updated changelog. Improved detection of ADI

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.24.19) noble; urgency=medium
+
+  * Improved process to detect connection with ADI
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 15 May 2025 09:01:43 +0200
+
 n4d-shutdowner-server (0.24.18) noble; urgency=medium
 
   * Fixed plugin
