--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.18.5) jammy-testing; urgency=medium
+
+  * Minor fixed
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 15 May 2025 09:05:19 +0200
+
 n4d-shutdowner-server (0.14.18.4) jammy-testing; urgency=medium
 
   * Wait until the session starts
