--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.18.6) jammy-testing; urgency=medium
+
+  * Replaced natfree references
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 03 Jun 2025 08:28:12 +0200
+
 n4d-shutdowner-server (0.14.18.5) jammy-testing; urgency=medium
 
   * Minor fixed
