--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.18.7) jammy-testing; urgency=medium
+
+  * Changed to exec startup when connection with server is detected
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 23 Jun 2025 09:37:25 +0200
+
 n4d-shutdowner-server (0.14.18.6) jammy-testing; urgency=medium
 
   * Replaced natfree references
