--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.18.8) jammy-testing; urgency=medium
+
+  * Fixed creation of n4d-var when a client goest to standlone mode 
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 25 Jun 2025 09:50:06 +0200
+
 n4d-shutdowner-server (0.14.18.7) jammy-testing; urgency=medium
 
   * Changed to exec startup when connection with server is detected
