--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-shutdowner-server (0.14.16) jammy; urgency=medium
+
+  * Changed to support new model
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 23 Jul 2025 08:44:54 +0200
+
 n4d-shutdowner-server (0.14.15) jammy; urgency=medium
 
   * Fixed performance in clientized desktop
